--- a/2048.css
+++ b/2048.css
@@ -1,46 +1,46 @@
 @import "../font/clear-sans.css";
 
-@media screen and (max-height: 850px) {
-  #board {
-    width: 320px;
-    height: 320px;
-    border-radius: 4px;
-    background: #cdc1b5;
-    border: 4px solid #bbada0;
-    margin-top: 26px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 60px;
-    z-index: 10;
-    margin-top: 40px;
-  }
-
-  .tile {
-    width: 78px;
-    height: 78px;
-    border: 4px solid #bbada0;
-    font-size: 40px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .footer {
-    flex: 1;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    font-size: 0.75rem;
-    color: #333;
-    opacity: 0.7;
-    margin-top: 48px;
-  }
+/* @media screen and (max-height: 850px) { */
+#board {
+  width: 400px;
+  height: 400px;
+  border-radius: 4px;
+  background: #cdc1b5;
+  border: 4px solid #bbada0;
+  margin-top: 26px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 60px;
+  z-index: 10;
+  margin-top: 40px;
 }
 
-@media screen and (min-height: 730px) {
+.tile {
+  width: 98px;
+  height: 98px;
+  border: 5px solid #bbada0;
+  font-size: 40px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer {
+  flex: 1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-size: 0.75rem;
+  color: #333;
+  opacity: 0.7;
+  margin-top: 48px;
+}
+/* } */
+
+/* @media screen and (min-height: 772px) {
   #board {
-    width: 470px;
-    height: 470px;
+    width: 469.9px;
+    height: 469.9px;
     border-radius: 6px;
     background: #cdc1b5;
     border: 5.875px solid #bbada0;
@@ -51,8 +51,8 @@
   }
 
   .tile {
-    width: 114.75px;
-    height: 114.75px;
+    width: 114.65px;
+    height: 114.65px;
     border: 5.875px solid #bbada0;
     font-size: 40px;
     font-weight: bold;
@@ -71,7 +71,7 @@
     opacity: 0.7;
     margin-top: 80px;
   }
-}
+} */
 
 * {
   margin: 0;
